--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="css/layout.css" type="text/css" rel="stylesheet" />
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="Utils.js"></script>
+    <script src="Manager/Observer.js"></script>
 
     <script src="Manager/ConfigManager.js"></script>
     <script src="Manager/FinanceManager.js"></script>
     <script src="Manager/TimeManager.js"></script>
 
     <script src="Entity/Cinema.js"></script>
+
+    <script src="Render/Render.js"></script>
 </head>
 <body>
 
@@ -28,7 +29,7 @@
         <td id="ui-date"></td>
         <td id="ui-currentcredit"></td>
         <td id="ui-fans"></td>
-        <td><button id= "openSettings" type="button" class="glyphicon glyphicon-cog"></button></td>
+        <td><button rel="openSettings" type="button" class="btn btn-primary top-menu">Settings</button></td>
         <td><button rel="research" class="btn btn-primary top-menu">Research</button></td>
         <td><button rel="schedule" class="btn btn-primary top-menu">Schedule</button></td>
         <td><button rel="advertising" class="btn btn-primary top-menu">Advertising</button></td>
@@ -46,16 +47,40 @@
     </tr>
 </table>
 
-
 <script>
-    // temporary code
-    var timeManager = new TimeManager;
-    var cinema = new Cinema("Our own Cinema", timeManager, ConfigManager);
+    var observer = new Observer;
 
-    document.querySelector('#ui-name').innerHTML = cinema.name;
-    document.querySelector('#ui-date').innerHTML = timeManager.getDate();
-    document.querySelector('#ui-currentcredit').innerHTML = cinema.financeManager.credit;
-    document.querySelector('#ui-fans').innerHTML = cinema.fans;
+    document.addEventListener('DOMContentLoaded', function() {
+        // temporary code, this should come from a save or a "create new game" menu
+        let cinema = new Cinema("Our own Cinema", new TimeManager(observer), ConfigManager);
+
+        //Object responsible for rendering changes in state
+        let render = new Render;
+
+        //the main loop that makes the game has a flow of time
+        setInterval(function () {
+            for (var i = 0; render.speed > i; i++) {
+                cinema.update();
+            }
+            render.render(cinema);
+        }, 1000);
+
+        // tmp example code to show the day changed
+        observer.subscribe('day', function(params) {
+            alert('Day is changed')
+        });
+        // end example code
+
+        //control the speed buttons
+        document.querySelectorAll('img.speed').forEach(function(element) {
+            element.addEventListener('click', function () {
+                console.log('changed speed');
+
+                console.log(this)
+                render.speed = this.dataset.ticks;
+            });
+        });
+    });
 </script>
 
 </body>
