added active marketing to cinema class

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <button class="btn btn-primary" id="FlyersCampaign">Flyers</button>
-                <button class="btn btn-primary" id="NewspaperCampaign">Newspapers</button>
-                <button class="btn btn-primary" id="RadioCampaign">Radio</button>
-                <button class="btn btn-primary" id="TVCampaign">TV</button>
-                <button class="btn btn-primary" id="InternetCampaign">Internet</button>
+                <button class="btn btn-primary" data-dismiss="modal" id="FlyersCampaign">Flyers</button>
+                <button class="btn btn-primary" data-dismiss="modal" id="NewspaperCampaign">Newspapers</button>
+                <button class="btn btn-primary" data-dismiss="modal" id="RadioCampaign">Radio</button>
+                <button class="btn btn-primary" data-dismiss="modal" id="TVCampaign">TV</button>
+                <button class="btn btn-primary" data-dismiss="modal" id="InternetCampaign">Internet</button>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
