--- a/index.html
+++ b/index.html
@@ -90,5 +90,17 @@
 </div>
 <!-- /Advertising Modal -->
 
+
+<div id="boots">
+    <template id="boot">
+        Amount of tickets sold: <span class="boot-ticket-sold"></span>
+        Amount of customers waiting: <span class="boot-customer-waiting"></span>
+        Amount of customers who went away: <span class="boot-customer-away"></span>
+    </template>
+
+    <button class="btn btn-secondary" id="build-boot">Build boot</button>
+</div>
+
+
 </body>
 </html>
