refactored marketing code into a manager

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     </template>
 
     <button class="btn btn-secondary" id="build-boot">Build boot</button>
+
+    <span id="active_campaign"></span><br/>
 </div>
 
 </body>
