updated slider code

--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
             <div class="modal-body">
                 <div class="form-group">
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" value="Flyers" checked>Flyers</label>
+                        <label><input type="radio" name="optMarketing" data-cost="50" value="Flyers" checked>Flyers</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" value="Newspaper">Newspapers</label>
+                        <label><input type="radio" name="optMarketing" data-cost="250" value="Newspaper">Newspapers</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" value="Radio">Radio</label>
+                        <label><input type="radio" name="optMarketing" data-cost="500" value="Radio">Radio</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" value="TV">TV</label>
+                        <label><input type="radio" name="optMarketing" data-cost="1000" value="TV">TV</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" value="Internet">Internet</label>
+                        <label><input type="radio" name="optMarketing" data-cost="2000" value="Internet">Internet</label>
                     </div>
                     <hr>
-                    <label for="marketingDurationRange">Choose duration: <span id="MarketingDurationPreview"></span></label>
+                    <label for="marketingDurationRange">Choose duration: <span id="MarketingDurationPreview">1</span></label>
                     <input type="range" class="form-control-range" value="1" min="1" max="12" id="marketingDurationRange">
                     <hr>
                     <button type="submit" data-dismiss="modal" class="btn btn-success" id="marketingSubmit">Confirm</button>
