added preview to inex.html

--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
             <div class="modal-body">
                 <div class="form-group">
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" data-cost="50" value="Flyers" checked>Flyers</label>
+                        <label><input type="radio" name="optMarketing" data-cost="50" value="Flyers"
+                                      checked>Flyers</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" data-cost="250" value="Newspaper">Newspapers</label>
+                        <label><input type="radio" name="optMarketing" data-cost="250"
+                                      value="Newspaper">Newspapers</label>
                     </div>
                     <div class="radio">
                         <label><input type="radio" name="optMarketing" data-cost="500" value="Radio">Radio</label>
@@ -100,13 +102,17 @@
                         <label><input type="radio" name="optMarketing" data-cost="1000" value="TV">TV</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" data-cost="2000" value="Internet">Internet</label>
+                        <label><input type="radio" name="optMarketing" data-cost="2000"
+                                      value="Internet">Internet</label>
                     </div>
                     <hr>
-                    <label for="marketingDurationRange">Choose duration: <span id="MarketingDurationPreview">1</span></label>
-                    <input type="range" class="form-control-range" value="1" min="1" max="12" id="marketingDurationRange">
+                    <label for="marketingDurationRange">Choose duration: <span
+                            id="MarketingDurationPreview">1</span></label>
+                    <input type="range" class="form-control-range" value="1" min="1" max="12"
+                           id="marketingDurationRange">
                     <hr>
-                    <button type="submit" data-dismiss="modal" class="btn btn-success" id="marketingSubmit">Confirm</button>
+                    <button type="submit" data-dismiss="modal" class="btn btn-success" id="marketingSubmit">Confirm
+                    </button>
                 </div>
             </div>
 
@@ -177,7 +183,9 @@
 
     <button class="btn btn-secondary" id="build-boot">Build boot</button>
 
-    <span id="active_campaign"></span><br/>
+    <div>
+        <span id="active_campaign"></span> <span id="duration_campaign"></span><br/>
+    </div>
 </div>
 
 </body>
