--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
+
+    <link href="/fa-icons/css/all.css" rel="stylesheet" type="text/css" />
     <link href="css/layout.scss" rel="stylesheet" type="text/css" />
 
     <script>
@@ -32,13 +34,11 @@
 
 <table width="100%">
     <tr>
-        <td id="ui-name"></td>
+        <td width="20"><button rel="openSettings" type="button" class="btn"><i class="fa fa-cogs"></i></button></td>
+        <td id="ui-name" width="10%"></td>
         <td id="ui-date"></td>
         <td id="ui-currentcredit"></td>
         <td id="ui-fans"></td>
-        <td>
-            <button rel="openSettings" type="button" class="btn btn-primary top-menu">Settings</button>
-        </td>
         <td>
             <button rel="research" class="btn btn-primary top-menu">Research</button>
         </td>
@@ -165,7 +165,7 @@
 <!-- Schedule Modal -->
 <div class="modal fade" id="scheduleModal" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle"
      aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Scheduler</h5>
@@ -187,13 +187,11 @@
                         <input type="checkbox" id="schedule-planner-break" />
                         Have a 15 minute break
                     </label>
-
-                    <p>Drag the movie in the scheduler</p>
                 </form>
 
-                <span id="schedule-movie-dragger" draggable="true"></span>
+                <span id="schedule-movie-dragger" draggable="true" data-toggle="tooltip" data-placement="top" title="Drag the movie in the timeslot and room you wish to plan it in."></span>
 
-                <table id="schedule-table"></table>
+                <table id="schedule-table" class="table table-striped"></table>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -202,30 +200,6 @@
     </div>
 </div>
 <!-- /Schedule Modal -->
-
-<style>
-    #schedule-table {
-        overflow: scroll;
-        table-layout: fixed;
-        width: 600px;
-    }
-
-    #schedule-table td, #schedule-table th {
-        width: 30px;
-        border-left: 1px gray dotted;
-    }
-
-    #schedule-movie-dragger {
-        background-color: black;
-        color: white;
-        height: 30px;
-        display: inline-block;
-        cursor: grabbing;
-        overflow: hidden;
-        text-align: center;
-    }
-</style>
-
 
 <div id="debugBar" style="display: none;">
     <h1>Debug bar</h1>
@@ -252,5 +226,10 @@
     </div>
 </div>
 
+<script>
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    });
+</script>
 </body>
 </html>
