Added debug bar to add money

--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
     <button class="trigger-event btn btn-secondary" rel="week">Trigger week change</button>
     <button class="trigger-event btn btn-secondary" rel="month">Trigger month change</button>
     <button class="trigger-event btn btn-secondary" rel="year">Trigger year change</button>
+
+    <form method="get" id="debugBar-add-money">
+        <input type="text" name="money" placeholder="Enter amount" />
+        <input type="submit" value="Add money" class="btn btn-danger"/>
+    </form>
 </div>
 
 <div id="game-area">
