--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <button rel="openSettings" type="button" class="btn btn-primary top-menu">Settings</button>
         </td>
         <td>
-            <button rel="research" class="btn btn-primary top-menu"  data-toggle="modal" data-target="#researchModal">Research</button>
+            <button rel="research" class="btn btn-primary top-menu" data-toggle="modal" data-target="#researchModal">
+                Research
+            </button>
         </td>
         <td>
             <button rel="schedule" class="btn btn-primary top-menu">Schedule</button>
@@ -127,15 +129,32 @@
 <!-- MoviePicker Modal -->
 <div class="modal fade" id="moviePickerModal" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle"
      aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-
+                <h2>Buy some movies</h2>
             </div>
             <div class="modal-body">
-                <div class="form-group" id="moviePickerBody">
+                <div class="container">
+                    <div class="row" id="movies-container">
 
+                    </div>
                 </div>
+
+                <template id="movie-template">
+                    <div class="col-sm-4">
+                        <div class="movie-block">
+                            <h3 class="movie-title"></h3>
+                            <i><strong class="movie-genre"></strong></i>
+                            <h3 class="movie-type"></h3>
+
+<!--                            Cost: <span class="movie-cost"></span>-->
+                        </div>
+                    </div>
+                </template>
+
+                <button id="buy-movie-btn">Purchase</button>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -196,17 +215,15 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Research items to stay up to date with the newest technologies and keep your customers interested! Don't fall behind the competition!</p>
-
+                <p>Research items to stay up to date with the newest technologies and keep your customers interested!
+                    Don't fall behind the competition!</p>
                 <div class="center">
                     <input type="range" class="slider" id="research-cost-slider">
                     <p>Cost: <span id="research-cost"></span>/month</p>
                 </div>
-
                 <div class="container">
                     <div class="row" id="research-container"></div>
                 </div>
-
                 <template id="research-template">
                     <div class="col-sm-4">
                         <div class="research-block">
@@ -260,14 +277,26 @@
         bottom: 0px;
     }
 
-    div.research-block  {
+    div.research-block {
         cursor: pointer;
         border: 1px black solid;
         padding: 6px;
         margin: 6px;
     }
 
+    div.movie-block {
+        cursor: pointer;
+        text-align: center;
+        border: 1px black solid;
+        padding: 6px;
+        margin: 6px;
+    }
+
     div.research-block.active {
+        background-color: lightgreen;
+    }
+
+    div.movie-block.active {
         background-color: lightgreen;
     }
 
