--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
             integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"></script>
-    <link href="css/layout.scss" rel="stylesheet" type="text/css" />
+    <link href="css/layout.scss" rel="stylesheet" type="text/css"/>
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        var googleVisualization = null;
+        google.charts.load('current', {'packages': ['corechart']});
+        google.charts.setOnLoadCallback(function() {
+            console.log('my google', google, google.visualization);
+            //yes, I just declared a global. Shame on my family! Shame on my dog! Shame on my cow!
+            googleVisualization = google.visualization;
+        });
+    </script>
 
     <script>
         function showDebug() {
@@ -40,7 +51,9 @@
             <button rel="openSettings" type="button" class="btn btn-primary top-menu">Settings</button>
         </td>
         <td>
-            <button rel="research" class="btn btn-primary top-menu"  data-toggle="modal" data-target="#researchModal">Research</button>
+            <button rel="research" class="btn btn-primary top-menu" data-toggle="modal" data-target="#researchModal">
+                Research
+            </button>
         </td>
         <td>
             <button rel="schedule" class="btn btn-primary top-menu">Schedule</button>
@@ -58,7 +71,9 @@
             <button rel="tickets" class="btn btn-primary top-menu">Tickets</button>
         </td>
         <td>
-            <button rel="statistics" class="btn btn-primary top-menu">Statistics</button>
+            <button rel="statistics" class="btn btn-primary top-menu" data-toggle="modal"
+                    data-target="#statisticsModal">Statistics
+            </button>
         </td>
         <td>
             <button rel="customers" class="btn btn-primary top-menu">Customers</button>
@@ -175,7 +190,8 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Research items to stay up to date with the newest technologies and keep your customers interested! Don't fall behind the competition!</p>
+                <p>Research items to stay up to date with the newest technologies and keep your customers interested!
+                    Don't fall behind the competition!</p>
 
                 <div class="center">
                     <input type="range" class="slider" id="research-cost-slider">
@@ -204,6 +220,77 @@
 </div>
 <!-- /Research Modal -->
 
+
+<style>
+    div.chart {
+        width: 50%;
+        height: 50%;
+    }
+</style>
+
+
+<!-- statistics Modal -->
+<div class="modal fade" id="statisticsModal" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Statistics</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <ul class="nav nav-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="general-statistics-tab" data-toggle="tab"
+                           href="#general-statistics" role="tab" aria-controls="general-statistics"
+                           aria-selected="true">General statistics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="statistics-movie-tab" data-toggle="tab" href="#statistics-movie"
+                           role="tab" aria-controls="statistics-movie" aria-selected="false">Statistics per movie</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="general-statistics" role="tabpanel"
+                         aria-labelledby="general-statistics-tab">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <h2>Credit over time</h2>
+                                    <div id="chart-credit" class="chart"></div>
+                                </div>
+                                <div class="col-sm">
+                                    <h2>Revenue over time</h2>
+                                    <div id="chart-revenue" class="chart"></div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm">
+                                    <h2>Visitors over time</h2>
+                                    <div id="chart-visitors" class="chart"></div>
+                                </div>
+                                <div class="col-sm">
+                                    <h2>Fans over time</h2>
+                                    <div id="chart-fans" class="chart"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="statistics-movie" role="tabpanel"
+                         aria-labelledby="statistics-movie-tab">Todo
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /statistics Modal -->
+
 <div id="debugBar" style="display: none;">
     <h1>Debug bar</h1>
     <button class="trigger-event btn btn-secondary" rel="hour">Trigger hour change</button>
@@ -213,7 +300,7 @@
     <button class="trigger-event btn btn-secondary" rel="year">Trigger year change</button>
 
     <form method="get" id="debugBar-add-money">
-        <input type="text" name="money" placeholder="Enter amount" />
+        <input type="text" name="money" placeholder="Enter amount"/>
         <input type="submit" value="Add money" class="btn btn-danger"/>
     </form>
 </div>
@@ -247,7 +334,7 @@
         bottom: 0px;
     }
 
-    div.research-block  {
+    div.research-block {
         cursor: pointer;
         border: 1px black solid;
         padding: 6px;
