--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                         <label><input type="radio" name="optMarketing" data-cost="1000" value="TV">TV</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="optMarketing" data-cost="2000"
-                                      value="Internet">Internet</label>
+                        <label><input type="radio" name="optMarketing" data-cost="2000" value="Internet">Internet</label>
                     </div>
                     <hr>
                     <label for="marketingDurationRange">Choose duration: <span
