lets get this reviewed

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                     <div class="row" id="movies-container">
 
                     </div>
+                    <div class="row">
+                        <div class="col" id="movies-button-container"></div>
+                        <div class="col" id="movies-error-container"></div>
+                    </div>
                 </div>
 
                 <template id="movie-template">
@@ -151,8 +155,6 @@
                         </div>
                     </div>
                 </template>
-
-                <button class="btn btn-success mt-4" id="buy-movie-btn">Purchase</button>
 
             </div>
         </div>
