made changes based on PR feedback

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <li>name : <span class="room-name"></span></li>
                 <li>type : <span class="room-type"></span></li>
                 <li>daily Cost : <span class="room-daily-cost"></span></li>
-                <li>popularity : <span class="room-popularity"></span></li>
+                <li>quality : <span class="room-quality"></span></li>
                 <li><button class="btn btn-outline-success btn-sm room-components">Manage room Components</button></li>
                 <li><button class="btn btn-outline-success btn-sm room-upgrade">Upgrade room</button></li>
             </ul>
