fix broken scheduler

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </button>
         </td>
         <td>
-            <button rel="schedule" class="btn btn-primary top-menu" data-toggle="modal" data-target="#scheduleModal">Schedule</button>
+            <button rel="schedule" class="btn btn-primary top-menu" data-toggle="modal" data-target="#scheduleModal" id="scheduleButton">Schedule</button>
         </td>
         <td>
             <button rel="advertising" class="btn btn-primary top-menu" data-toggle="modal" data-target="#advertisingModal">Advertising</button>
