temp commit before merging master

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                     <div class="radio">
                         <label><input type="radio" name="optMarketing" data-cost="2000" value="Internet">Internet</label>
                     </div>
+                    <div class="radio">
+                        <label><input type="radio" name="optMarketing" data-cost="0" value="Tickets">Free tickets</label>
+                    </div>
                     <hr>
                     <label for="marketingDurationRange">Choose duration: <span
                             id="MarketingDurationPreview">1</span></label>
