--- a/index.html
+++ b/index.html
@@ -289,7 +289,19 @@
     </form>
 </div>
 
-<div id="game-area">
+<section id="game-area">
+    <div class="ai-area" id="buying-ticket-area">
+        <h2>Buying ticket</h2>
+    </div>
+    <div class="ai-area" id="watching-movie-area">
+        <h2>Watching movie</h2>
+    </div>
+    <div class="ai-area" id="leaving-cinema-area">
+        <h2>Leaving cinema</h2>
+    </div>
+</section>
+
+<div>
 <!--    booth-->
     <div id="booth-container"></div>
 
@@ -327,7 +339,6 @@
             </ul>
         </div>
     </template>
-
 </div>
 
 <progress max="100" value="0" id="research-progress-bar"></progress>
