--- a/index.html
+++ b/index.html
@@ -363,6 +363,10 @@
 </div>
 
 <div id="customer-detail-panel">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+    </button>
+
     <h3>
         <i class="fa fa-female"></i>
         <i class="fa fa-male"></i>
