some of the changes

--- a/index.html
+++ b/index.html
@@ -128,13 +128,9 @@
                                     <label><input type="radio" name="optMarketing" data-cost="1000"
                                                   value="Internet">Internet</label>
                                 </div>
-                                <div class="radio">
-                                    <label><input type="radio" name="optMarketing" data-cost="0" value="Tickets">Free
-                                        tickets</label>
-                                </div>
                                 <hr>
                                 <label for="marketingDurationRange">Choose duration: <span
-                                        id="MarketingDurationPreview">1</span></label>
+                                        id="MarketingDurationPreview"></span></label>
                                 <input type="range" class="form-control-range" value="1" min="1" max="12"
                                        id="marketingDurationRange">
                                 <hr>
@@ -175,7 +171,7 @@
                                 </div>
                                 <hr>
                                 <label for="movieMarketingDurationRange">Choose duration: <span
-                                        id="movieMarketingDurationPreview">1</span></label>
+                                        id="movieMarketingDurationPreview"></span></label>
                                 <input type="range" class="form-control-range" value="1" min="1" max="12"
                                        id="movieMarketingDurationRange">
                                 <hr>
@@ -437,11 +433,6 @@
     </template>
 
     <button class="btn btn-secondary" id="build-booth">Build booth</button>
-
-    <!--    campaign-->
-    <div>
-        <span id="active_campaign"></span> <span id="duration_campaign"></span><br/>
-    </div>
 
     <!--    room-->
     <hr>
