--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
         var googleVisualization = null;
         google.charts.load('current', {'packages': ['corechart']});
         google.charts.setOnLoadCallback(function() {
-            console.log('my google', google, google.visualization);
             //yes, I just declared a global. Shame on my family! Shame on my dog! Shame on my cow!
-            googleVisualization = google.visualization;
+            //googleVisualization = google.visualization;
         });
-    </script>
 
-    <script>
         function showDebug() {
             document.getElementById('debugBar').style.display = 'block';
         }
@@ -78,8 +75,7 @@
             <button rel="tickets" class="btn btn-primary top-menu">Tickets</button>
         </td>
         <td>
-            <button rel="statistics" class="btn btn-primary top-menu" data-toggle="modal"
-                    data-target="#statisticsModal">Statistics
+            <button rel="statistics" class="btn btn-primary top-menu" id="statisticsModalButton">Statistics
             </button>
         </td>
         <td>
@@ -343,15 +339,6 @@
 </div>
 <!-- /Research Modal -->
 
-
-<style>
-    div.chart {
-        width: 50%;
-        height: 50%;
-    }
-</style>
-
-
 <!-- statistics Modal -->
 <div class="modal fade" id="statisticsModal" tabindex="-1" role="dialog" aria-labelledby="ModalCenterTitle"
      aria-hidden="true">
@@ -363,7 +350,8 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="statistics-not-available"></div>
+            <div class="modal-body hide" id="statistics-available">
                 <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item">
                         <a class="nav-link active" id="general-statistics-tab" data-toggle="tab"
@@ -376,26 +364,18 @@
                     </li>
                 </ul>
                 <div class="tab-content">
-                    <div class="tab-pane fade show active" id="general-statistics" role="tabpanel"
-                         aria-labelledby="general-statistics-tab">
+                    <div class="tab-pane fade show active" id="general-statistics" role="tabpanel" aria-labelledby="general-statistics-tab">
                         <div class="container">
                             <div class="row">
                                 <div class="col-sm">
-                                    <h2>Credit over time</h2>
-                                    <div id="chart-credit" class="chart"></div>
-                                </div>
-                                <div class="col-sm">
-                                    <h2>Revenue over time</h2>
-                                    <div id="chart-revenue" class="chart"></div>
+                                    <div class="chart"  id="chart-credit"></div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm">
-                                    <h2>Visitors over time</h2>
                                     <div id="chart-visitors" class="chart"></div>
                                 </div>
                                 <div class="col-sm">
-                                    <h2>Fans over time</h2>
                                     <div id="chart-fans" class="chart"></div>
                                 </div>
                             </div>
