fixed modal tabs

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 <!-- Nav tabs -->
                 <div role="tabpanel">
                     <ul class="nav nav-tabs" role="tablist">
-                        <li role="presentation" class="active"><a href="#genericTab" aria-controls="genericTab"
-                                                                  role="tab"
-                                                                  data-toggle="tab">Generic</a></li>
-                        <li role="presentation"><a href="#movieTab" aria-controls="movieTab" role="tab"
-                                                   data-toggle="tab">Movie</a>
+                        <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#genericTab" role="tab" aria-controls="generic-marketing" aria-selected="true">Generic</a></li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#movieTab"
+                               role="tab" aria-controls="movie-marketing" aria-selected="false">Movie</a>
                         </li>
-                        <li role="presentation"><a href="#activeTab" aria-controls="activeTab" role="tab"
-                                                   data-toggle="tab">Active</a>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#activeTab"
+                               role="tab" aria-controls="active-marketing" aria-selected="false">Active</a>
                         </li>
                     </ul>
                     <div class="tab-content">
